[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pykrx-mcp"
dynamic = ["version"]
description = "MCP server for pykrx - Korean stock market data library"
authors = [
    { name = "sharebook-kr", email = "help@stockplus.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pykrx>=1.0.46",
    "mcp>=1.1.2",
    "pandas>=2.0.0",
    "setuptools>=65.0.0",
]
keywords = ["mcp", "pykrx", "kospi", "kosdaq", "ai-agent", "krx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/sharebook-kr/pykrx-mcp"
Repository = "https://github.com/sharebook-kr/pykrx-mcp"
Issues = "https://github.com/sharebook-kr/pykrx-mcp/issues"

[project.scripts]
pykrx-mcp = "pykrx_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mcp[cli]>=1.1.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pykrx_mcp"]

[tool.hatch.version]
path = "src/pykrx_mcp/__about__.py"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pykrx_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
